# SkiHide

./: README.md  index.html  main.py  optimized.spec  package.json  pnpm-lock.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-preview.yml  build-releases.yml  build-windows.yml  mirrorchyan_release.yml  mirrorchyan_release_note.yml
lang/: en_US.json  ja_JP.json  zh_CN.json  zh_TW.json
skihide/: app.py  i18n.py
skihide/features/: tray.py
skihide/utils/: logging_setup.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admin_ops.rs  audio_ops.rs  cache_ops.rs  config.rs  logging.rs  main.rs  memory_ops.rs  models.rs  mouse_hook.rs  startup_ops.rs  update_ops.rs  window_ops.rs
src/i18n/: index.ts  messages.ts
src/types/: index.ts
