[package]
name = "skihide"
version = "2.0.1-Alpha2"
description = "SkiHide rewritten with Tauri v2"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = "0.4"
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.2.5", features = ["tray-icon", "image-ico"] }
tauri-plugin-global-shortcut = "2.2.0"
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
